@@ -34,6 +34,8 @@
 #include <errno.h>
 #include <string.h>
 
+#include "gtk-compat.h"
+
 /* Private structure, property and signal definitions. */
 #define GTK_WEATHER_GET_PRIVATE(obj) (G_TYPE_INSTANCE_GET_PRIVATE ((obj), \
                                       GTK_WEATHER_TYPE, GtkWeatherPrivate))
